...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        tools:ignore="HardcodedText">

        <TextView
            android:id="@+id/loginMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@{elements.headerText}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailTextField"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginMessageText" />

        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
...
            android:text="@{elements.validationButton}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

        <ImageView
            android:id="@+id/checkEmailImage"
            android:layout_width="29dp"
            android:layout_height="24dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/check_image"
            android:visibility="@{elements.isEmailCorrect ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="@id/emailTextField"
            app:layout_constraintStart_toEndOf="@+id/emailTextField"
            app:layout_constraintTop_toTopOf="@id/emailTextField"
            tools:layout_editor_absoluteY="106dp" />

        <ImageView
            android:id="@+id/checkPasswordImage"
            android:layout_width="29dp"
            android:layout_height="24dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/check_image"
            android:visibility="@{elements.isPasswordCorrect ? View.VISIBLE : View.GONE}"
...
