...

    <!-- PUSH NOTIFICATIONS -->
    <string name="default_notification_channel_id">CH_01</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="city">City:</string>
    <string name="sex">Sex</string>
    <string name="tokens">Tokens:</string>
    <string name="add_a_new_favor">Add a new Favor</string>
    <string name="titleFavor">Favor Title</string>
    <string name="descriptionFavor">Favor Description</string>
...
